--- a/public/huds/default/style.css
+++ b/public/huds/default/style.css
@@ -1594,7 +1594,7 @@ body {
   height: 35%;
   position: absolute;
   top: 65%;
-  background-color: #5c5c5c;
+  background-color: #464646;
   z-index: 10;
 }
 
