--- a/public/huds/default/template.pug
+++ b/public/huds/default/template.pug
@@ -53,7 +53,7 @@ html
           #round_timer
             #round_timer_text
               |0:00
-          //-#round_number
+          #round_number
             |Round Number
         #right_team
           #logo
@@ -84,11 +84,49 @@ html
       //- Radar Section WIP
       #radar_container
         #radar_title
-          #radar_main
+          #radar_main   
           #radar_second
         #radar
           //- Comment out this iframe to take out the radar.
-          iframe(width="100%" height="100%" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" src="http://127.0.0.1:36364")
+        iframe(width="100%" height="100%" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" src="http://127.0.0.1:36364")
+      
+      #Vetos 
+        #Vetos_Container 
+          #Vetos_Title
+            #map_picked Map
+            #picked_by Picked By
+            #won_by Winner
+          #Vetos_Maps
+            #map_1
+              #map_1_pick
+              #map_1_team
+                img(width="50px" height="50px")
+              #map_1_winner
+                img(width="50px" height="50px")
+            #map_2
+              #map_2_pick
+              #map_2_team
+                img(width="50px" height="50px")
+              #map_2_winner
+                img(width="50px" height="50px")
+            #map_3
+              #map_3_pick
+              #map_3_team
+                img(width="50px" height="50px")
+              #map_1_winner
+                img(width="50px" height="50px")
+            #map_4
+              #map_4_pick
+              #map_4_team
+                img(width="50px" height="50px")
+              #map_4_winner
+                img(width="50px" height="50px")
+            #map_5
+              #map_5_pick
+              #map_5_team
+                img(width="50px" height="50px")
+              #map_5_winner
+                img(width="50px" height="50px")
      
       //- Players alive section
       #players_alive
