--- a/views/players.pug
+++ b/views/players.pug
@@ -33,7 +33,7 @@
 						input.file-path.validate(type='text')
 			.input-field.col.s12.m6
 				.col.s12.m6
-					.card-panel.grey.lighten-5.z-depth-1
+					.card-panel.grey.darken-3.z-depth-1
 						.row
 							.col.s12
 								img.responsive-img#avatar_img(alt='')
