--- a/views/panel.pug
+++ b/views/panel.pug
@@ -1,16 +1,21 @@
+.row(style="margin-top: 2rem;")
+	.col.s6.offset-s3(style="text-align:center;")
+		.row
+			.input-field
+				select#botype
+					option(value='', disabled='', selected='') Choose your option
+					option(value='none') None
+					option(value='bo1') Best Of 1
+					option(value='bo3') Best Of 3
+					option(value='bo5') Best Of 5
+				label Choose type (in BO1 bar doesnt show)			
+
 .row
-	.col.s12(style="text-align:center;")
-		.input-field.col.s12
-			select#botype
-				option(value='', disabled='', selected='') Choose your option
-				option(value=null) None
-				option(value='bo1') Best Of 1
-				option(value='bo3') Best Of 3
-				option(value='bo5') Best Of 5
-			label Choose type (in BO1 bar doesnt show)
-		.col.s12.m6
-			.row
-				h3 Team 1
+	.col.s5.offset-s1
+		.card.medium.blue-grey.darken-4
+			.card-content
+				.card-title(style="text-align:center;")
+					h4 Team 1
 				.input-field.col.s12
 					select#team_1_score
 						option(value='0', selected) 0
@@ -18,15 +23,18 @@
 						option(value='2') 2
 						option(value='3') 3
 					label Map wins for team 1
-			.row
 				.input-field.col.s12
 					select#team_1.icons
 						option(value=null) NONE
-						option(value='auto', selected) Try to match team automatically
 					label Set team 1
-		.col.s12.m6
-			.row
-				h3 Team 2
+				.input-field.col.s12
+					input#team_1_coach.validate(placeholder='Enter in SteamID64', type='text')
+					label Hide team 1 coach
+	.col.s5
+		.card.medium.blue-grey.darken-4
+			.card-content
+				.card-title(style="text-align:center;")
+					h4 Team 1
 				.input-field.col.s12
 					select#team_2_score
 						option(value='0', selected) 0
@@ -34,15 +42,150 @@
 						option(value='2') 2
 						option(value='3') 3
 					label Map wins for team 2
-			.row
 				.input-field.col.s12
 					select#team_2.icons
 						option(value=null) NONE
-						option(value='auto', selected) Try to match team automatically
 					label Set team 2
-		.input-field.col.s12
-			.row
+				.input-field.col.s12
+					input#team_2_coach.validate(placeholder='Enter in SteamID64', type='text')
+					label Hide team 2 coach 
+
+.row
+	.col.s12
+		.col.s4
+			#Map1Card.card.small.blue-grey.darken-4
+				.card-content
+					.card-title(style="text-align: center;") Map 1
+					.input-field
+						select#map_1_pick
+							option(value='none', selected) None
+							option(value='Mirage') Mirage
+							option(value='Vertigo') Vertigo
+							option(value='Ancient') Ancient
+							option(value='Anubis') Anubis
+							option(value='Overpass') Overpass
+							option(value='Nuke') Nuke
+							option(value='Inferno') Inferno
+							option(value='Train') Train
+							option(value='Dust2') Dust 2
+						label Select Map 1
+					.input-field
+						select#map_1_team
+							option(value=NULL, selected) None
+						label Team that picked
+					.input-field
+						select#map_1_winner
+							option(value=NULL, selected) None
+						label Team that won
+		.col.s4
+			#Map2Card.card.small.blue-grey.darken-4
+				.card-content
+					.card-title(style="text-align: center;") Map 2
+					.input-field
+						select#map_2_pick
+							option(value='none', selected) None
+							option(value='Mirage') Mirage
+							option(value='Vertigo') Vertigo
+							option(value='Ancient') Ancient
+							option(value='Anubis') Anubis
+							option(value='Overpass') Overpass
+							option(value='Nuke') Nuke
+							option(value='Inferno') Inferno
+							option(value='Train') Train
+							option(value='Dust2') Dust 2
+						label Select Map 2
+					.input-field
+						select#map_2_team
+							option(value=NULL, selected) None
+						label Team that picked
+					.input-field
+						select#map_2_winner
+							option(value=NULL, selected) None
+						label Team that won
+		.col.s4
+			#Map3Card.card.small.blue-grey.darken-4
+				.card-content
+					.card-title(style="text-align: center;") Map 3
+					.input-field
+						select#map_3_pick
+							option(value='none', selected) None
+							option(value='Mirage') Mirage
+							option(value='Vertigo') Vertigo
+							option(value='Ancient') Ancient
+							option(value='Anubis') Anubis
+							option(value='Overpass') Overpass
+							option(value='Nuke') Nuke
+							option(value='Inferno') Inferno
+							option(value='Train') Train
+							option(value='Dust2') Dust 2
+						label Select Map 3
+					.input-field
+						select#map_3_team
+							option(value=NULL, selected) None
+						label Team that picked
+					.input-field
+						select#map_1_winner
+							option(value=NULL, selected) None
+						label Team that won
+	.col.s12
+		.col.s4.offset-s2
+			#Map4Card.card.small.blue-grey.darken-4
+				.card-content
+					.card-title(style="text-align: center;") Map 4
+					.input-field
+						select#map_4_pick
+							option(value='none', selected) None
+							option(value='Mirage') Mirage
+							option(value='Vertigo') Vertigo
+							option(value='Ancient') Ancient
+							option(value='Anubis') Anubis
+							option(value='Overpass') Overpass
+							option(value='Nuke') Nuke
+							option(value='Inferno') Inferno
+							option(value='Train') Train
+							option(value='Dust2') Dust 2
+						label Select Map 4
+					.input-field
+						select#map_4_team
+							option(value=NULL, selected) None
+						label Team that picked
+					.input-field
+						select#map_4_winner
+							option(value=NULL, selected) None
+						label Team that won
+		.col.s4
+			#Map5Card.card.small.blue-grey.darken-4
+				.card-content
+					.card-title(style="text-align: center;") Map 5
+					.input-field
+						select#map_5_pick
+							option(value='none', selected) None
+							option(value='Mirage') Mirage
+							option(value='Vertigo') Vertigo
+							option(value='Ancient') Ancient
+							option(value='Anubis') Anubis
+							option(value='Overpass') Overpass
+							option(value='Nuke') Nuke
+							option(value='Inferno') Inferno
+							option(value='Train') Train
+							option(value='Dust2') Dust 2
+						label Select Map 5
+					.input-field
+						select#map_5_team
+							option(value=NULL, selected) None
+						label Team that picked
+					.input-field
+						select#map_5_winner
+							option(value=NULL, selected) None
+						label Team that won
+
+.row
+	.input-field.col.s12
+		.row
+			#actionbuttons
 				a.waves-effect.waves-light.btn#set Set
+					i.material-icons done
 				a.waves-effect.waves-light.btn#swap Swap
-			.row
-				a.waves-effect.waves-light.btn#ref Force refresh HUD
+					i.material-icons swap_horiz
+				a.waves-effect.waves-light.btn#ref Refresh
+					i.material-icons refresh
