--- a/views/teams.pug
+++ b/views/teams.pug
@@ -1,7 +1,7 @@
 .row
 		form(enctype="multipart/form-data").col.s12
 			.row
-				.input-field.col.s12.m12
+				.input-field.col.s12.m12.white-text
 					select#teams
 						option(value='default', selected='') New team
 				.input-field.col.s12.m6
@@ -26,7 +26,7 @@
 							input.file-path.validate(type='text')
 				.input-field.col.s12.m6
 					.col.s12.m6
-						.card-panel.grey.lighten-5.z-depth-1
+						.card-panel.grey.darken-3.z-depth-1
 							.row
 								.col.s12
 									img.responsive-img#logo_img(alt='')
