--- a/public/huds/default/style.css
+++ b/public/huds/default/style.css
@@ -314,7 +314,7 @@ body {
   position: absolute;
   left: 50%;
   transform: translateX(-50%);
-  top: 50px;
+  bottom: 5px;
   float: left;
   width: 70px;
   height: 16px;
@@ -946,7 +946,7 @@ body {
 }
 
 #obs_nades {
-  width: 75px;
+  width: 150px;
   height: 40px;
   position: absolute;
 }
@@ -955,6 +955,7 @@ body {
   width: 20px;
   height: 20px;
   position: absolute;
+  left: 30px;
   bottom: 10px;
   z-index: 1;
 }
@@ -963,7 +964,7 @@ body {
   width: 20px;
   height: 20px;
   position: absolute;
-  left: 20px;
+  left: 55px;
   bottom: 10px;
   z-index: 1;
 }
@@ -972,7 +973,7 @@ body {
   width: 20px;
   height: 20px;
   position: absolute;
-  left: 40px;
+  left: 80px;
   bottom: 10px;
   z-index: 1;
 }
@@ -981,9 +982,63 @@ body {
   width: 20px;
   height: 20px;
   position: absolute;
-  left: 60px;
+  left: 105px;
   bottom: 10px;
   z-index: 1;
+}
+
+#obs_nades_h {
+  width: 150px;
+  height: 40px;
+  position: absolute;
+}
+
+#obs_nade1_h {
+  width: 5px;
+  height: 5px;
+  border-radius: 50%;
+  position: absolute;
+  background-color: #fafafa;
+  bottom: 15px;
+  opacity: 0.3;
+  z-index: 1;
+  left: 35px;
+}
+
+#obs_nade2_h {
+  width: 5px;
+  height: 5px;
+  border-radius: 50%;
+  position: absolute;
+  background-color: #fafafa;
+  bottom: 15px;
+  opacity: 0.3;
+  z-index: 1;
+  left: 60px;
+}
+
+#obs_nade3_h {
+  width: 5px;
+  height: 5px;
+  border-radius: 50%;
+  position: absolute;
+  background-color: #fafafa;
+  bottom: 15px;
+  opacity: 0.3;
+  z-index: 1;
+  left: 85px;
+}
+
+#obs_nade4_h {
+  width: 5px;
+  height: 5px;
+  border-radius: 50%;
+  position: absolute;
+  background-color: #fafafa;
+  bottom: 15px;
+  opacity: 0.3;
+  z-index: 1;
+  left: 110px;
 }
 
 #obs_right_section {
@@ -993,27 +1048,26 @@ body {
   position: absolute;
 }
 
-/*#obs_bullets_section {
+#obs_bullets_section {
   width: 20px;
   height: 20px;
   position: absolute;
-  left: 55px;
-  top: 10px;
-}*/
+  left: 35px;
+  bottom: 2.5px;
+}
 
 #obs_ammo_section {
   position: absolute;
-  width: 70px;
-  height: 40px;
-  left: 80px;
+  width: 150px;
+  height: 30px;
 }
 
 #obs_clip {
-  left: 5px;
+  left: 60px;
   width: 25px;
   height: 20px;
   position: absolute;
-  bottom: 12px;
+  bottom: 5px;
   font-family: "Rajdhani", sans-serif;
   text-align: right;
   font-size: 20px;
@@ -1025,8 +1079,8 @@ body {
   width: 25px;
   height: 20px;
   position: absolute;
-  right: 15px;
-  bottom: 12px;
+  left: 85px;
+  bottom: 5px;
   font-family: "Rajdhani", sans-serif;
   text-align: right;
   font-size: 20px;
