--- a/public/huds/default/template.pug
+++ b/public/huds/default/template.pug
@@ -38,14 +38,9 @@ html
             .block5
           #main TEAM NAME
           #alert
-            #alert_img_left
-              img#team_logo
             #alert_text
               |ALERT TEXT
             #alert_pole_right
-            #bomb_defuse
-              #icon
-                .kit
         #center_section
           #score_left 10
           #score_right 10
@@ -65,8 +60,6 @@ html
             .block5
           #main TEAM NAME
           #alert
-            #alert_img_right
-              img#team_logo
             #alert_text
               |ALERT TEXT
             #bomb_defuse
@@ -138,8 +131,8 @@ html
       #observed
         #obs_avatar
           img#obs_img
-          #obs_team
-            img#obs_team_img
+        #obs_team
+          img#obs_team_img
         #obs_lane3
           #obs_alias_text
             |PLAYER ALIAS
@@ -152,22 +145,21 @@ html
               #obs_hpbar3
             #obs_hpblock4
               #obs_hpbar4
+              #obs_hpbarX
           #obs_lane3_left_pole
           #obs_left_section
             #obs_health_section
               #obs_health_img
-              #obs_health_text
-                |100
+                #obs_health_text
+                  |100
             #obs_armor_section
               #obs_armor_img
-              #obs_armor_text
-                |100
           #obs_bomb_kit
           #obs_round_kills
             #obs_skull
             #obs_round_kills_text
           #obs_middle_section
-            #obs_bullets_section
+            //-#obs_bullets_section
             #obs_ammo_section
               #obs_clip
                 |150
