--- a/public/huds/default/template.pug
+++ b/public/huds/default/template.pug
@@ -83,41 +83,47 @@ html
       
       #Vetos 
         #Vetos_Container 
-          #Vetos_Title
-            #map_picked Map
-            #picked_by Picked By
-            #won_by Winner
           #Vetos_Maps
             #map_1
-              #map_1_pick
-              #map_1_team
-                img(width="50px" height="50px")
+              #Vetos_Title
+                #picked_by Picked By
+                #map_1_team
+                  img(width="30px" height="30px")
               #map_1_winner
                 img(width="50px" height="50px")
+              #map_1_pick
             #map_2
-              #map_2_pick
-              #map_2_team
-                img(width="50px" height="50px")
+              #Vetos_Title
+                #picked_by Picked By
+                #map_2_team
+                  img(width="30px" height="30px")
               #map_2_winner
                 img(width="50px" height="50px")
+              #map_2_pick
             #map_3
+              #Vetos_Title
+                #picked_by Picked By
+                #map_3_team
+                  img(width="30px" height="30px")
+              #map_3_winner
+                img(width="50px" height="50px")
               #map_3_pick
-              #map_3_team
-                img(width="50px" height="50px")
-              #map_1_winner
-                img(width="50px" height="50px")
             #map_4
-              #map_4_pick
-              #map_4_team
-                img(width="50px" height="50px")
+              #Vetos_Title
+                #picked_by Picked By
+                #map_4_team
+                  img(width="30px" height="30px")
               #map_4_winner
                 img(width="50px" height="50px")
+              #map_4_pick
             #map_5
-              #map_5_pick
-              #map_5_team
-                img(width="50px" height="50px")
+              #Vetos_Title
+                #picked_by Decider
+                #map_5_team
+                  img(width="30px" height="30px")
               #map_5_winner
                 img(width="50px" height="50px")
+              #map_5_pick
      
       //- Players alive section
       #players_alive
