--- a/public/huds/default/template.pug
+++ b/public/huds/default/template.pug
@@ -91,6 +91,7 @@ html
                   img(width="30px" height="30px")
               #map_1_winner
                 img(width="50px" height="50px")
+                #image_shade
               #map_1_pick
             #map_2
               #Vetos_Title
@@ -99,6 +100,7 @@ html
                   img(width="30px" height="30px")
               #map_2_winner
                 img(width="50px" height="50px")
+                #image_shade
               #map_2_pick
             #map_3
               #Vetos_Title
@@ -107,6 +109,7 @@ html
                   img(width="30px" height="30px")
               #map_3_winner
                 img(width="50px" height="50px")
+                #image_shade
               #map_3_pick
             #map_4
               #Vetos_Title
@@ -115,6 +118,7 @@ html
                   img(width="30px" height="30px")
               #map_4_winner
                 img(width="50px" height="50px")
+                #image_shade
               #map_4_pick
             #map_5
               #Vetos_Title
@@ -123,6 +127,7 @@ html
                   img(width="30px" height="30px")
               #map_5_winner
                 img(width="50px" height="50px")
+                #image_shade
               #map_5_pick
      
       //- Players alive section
