--- a/public/huds/default/style.css
+++ b/public/huds/default/style.css
@@ -258,6 +258,13 @@ body {
   flex-direction: rows;
   justify-content: space-evenly
 }
+#image_shade{
+  position: absolute;
+  width: 125px;
+  height: 50px;
+  background-color: rgba(0, 0, 0, 0.7);
+  z-index: -1;
+}
 #map_1{
   height: 100px;
   width: 125px;
@@ -292,7 +299,7 @@ body {
   display: flex;
   top: 0px;
   justify-content: center;
-  background-color: rgba(0, 0, 0, 0.7);
+  z-index: 99;
 }
 
 #map_2{
@@ -320,7 +327,7 @@ body {
   display: flex;
   top: 0px;
   justify-content: center;
-  background-color: rgba(0, 0, 0, 0.4);
+  background-color: rgba(0, 0, 0, 0.7);
 }
 #map_2_winner{
   position: relative;
@@ -329,6 +336,7 @@ body {
   display: flex;
   top: 0px;
   justify-content: center;
+  z-index: 99;
 }
 
 #map_3{
@@ -356,7 +364,7 @@ body {
   display: flex;
   top: 0px;
   justify-content: center;
-  background-color: rgba(0, 0, 0, 0.4);
+  background-color: rgba(0, 0, 0, 0.7);
 }
 #map_3_winner{
   position: relative;
@@ -365,6 +373,7 @@ body {
   display: flex;
   top: 0px;
   justify-content: center;
+  z-index: 99;
 }
 
 #map_4{
@@ -392,7 +401,7 @@ body {
   display: flex;
   top: 0px;
   justify-content: center;
-  background-color: rgba(0, 0, 0, 0.4);
+  background-color: rgba(0, 0, 0, 0.7);
 }
 #map_4_winner{
   position: relative;
@@ -401,6 +410,7 @@ body {
   display: flex;
   top: 0px;
   justify-content: center;
+  z-index: 99;
 }
 
 #map_5{
@@ -428,7 +438,7 @@ body {
   display: flex;
   top: 0px;
   justify-content: center;
-  background-color: rgba(0, 0, 0, 0.4);
+  background-color: rgba(0, 0, 0, 0.7);
 }
 #map_5_winner{
   position: relative;
@@ -437,6 +447,7 @@ body {
   display: flex;
   top: 0px;
   justify-content: center;
+  z-index: 99;
 }
 /* End Vetos Section */
 
