--- a/public/huds/default/template.pug
+++ b/public/huds/default/template.pug
@@ -92,6 +92,7 @@ html
               #map_1_winner
                 img(width="50px" height="50px")
                 #image_shade
+              #map_1_score
               #map_1_pick
             #map_2
               #Vetos_Title
@@ -101,6 +102,7 @@ html
               #map_2_winner
                 img(width="50px" height="50px")
                 #image_shade
+              #map_2_score
               #map_2_pick
             #map_3
               #Vetos_Title
@@ -110,6 +112,7 @@ html
               #map_3_winner
                 img(width="50px" height="50px")
                 #image_shade
+              #map_3_score
               #map_3_pick
             #map_4
               #Vetos_Title
@@ -119,6 +122,7 @@ html
               #map_4_winner
                 img(width="50px" height="50px")
                 #image_shade
+              #map_4_score
               #map_4_pick
             #map_5
               #Vetos_Title
@@ -128,7 +132,10 @@ html
               #map_5_winner
                 img(width="50px" height="50px")
                 #image_shade
+              #map_5_score
               #map_5_pick
+              
+              
      
       //- Players alive section
       #players_alive
