--- a/HUD/public/huds/default/template.pug
+++ b/HUD/public/huds/default/template.pug
@@ -106,8 +106,8 @@ html
               #map_2_pick
             #map_3
               #Vetos_Title
-                #picked_by Picked By
-                #map_3_team
+                #picked_by Decider
+                //-#map_3_team
                   img(width="30px" height="30px")
               #map_3_winner
                 img(width="50px" height="50px")
