--- a/HUD/public/huds/default/template.pug
+++ b/HUD/public/huds/default/template.pug
@@ -149,7 +149,7 @@ html
       #observed
         #obs_avatar
           img#obs_img
-        #obs_team
+        //-#obs_team
           img#obs_team_img
         #obs_lane3
           #obs_alias_text
